# git-smart-commit

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  eval.py  fbabvcu20k0pu6bkdblmcrjgbpkeqocj.darc  fbabvcu20k0pu6bkdblmcrjgbpkeqocj.darc.records  fbabvcu20k0pu6bkdblmcrjgbpkeqocj.darc.tail  finetuning-plan.md  git-smart-commit  gsc-out.txt  harvest-training-data.py  label-training-data.py  manifest  merge-and-quantize.sh  ntcruhqf6bbeul4hgald1akmpocfdajn  ntcruhqf6bbeul4hgald1akmpocfdajn.records  ntcruhqf6bbeul4hgald1akmpocfdajn.tail  out  prepare-sft-data.py  pyproject.toml  train.py  uqmrfgunutldulvblhslfbl1de8da64e.darc
.beads/: .gitignore  .metadata.json.swp  config.yaml  dolt-backup.json  issues.jsonl  metadata.json  sync-state.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/dolt/beads/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/export-state/: 6f29112b1ff74d3b.json  cecaa4a56e52ca05.json  ff07fb2dfb07667d.json
context/: decisions.md  incremental-emit.md  lcm-paper.txt  prompt-audit.md  repo-map.md  session-2026-03-15.md
skill/: README.md  SKILL.md
src/steropes-pkg/: pyproject.toml
src/steropes-pkg/steropes/: __init__.py  client.py  config.py  parsers.py  store.py  text.py  tools.py  types.py  ui.py
src/steropes-pkg/tests/: test_compaction.py  test_config.py  test_parsers.py  test_store.py  test_text.py  test_tokenize.py  test_tools.py  test_types.py  test_ui.py
tests/: test_check_git_state.py  test_core.py
(+2 files in other folders)
